<resources>
    <string name="app_name">HerbVision</string>
    <string name="gallery">Galeri</string>
    <string name="keterangan">Identifikasi tanaman herbal dengan kamera atau pilih gambar dari galeri</string>
    <string name="herb">Herb</string>
    <string name="vision">Vision</string>
    <string name="kamera">Kamera</string>
    <string name="preview">Preview gambar</string>
    <string name="identifikasi">Mulai Klasifikasi</string>
    <string name="tentang">Tentang</string>
    <string name="histori">Riwayat</string>
    <string name="tutor1">Untuk mengidentifikasi tanaman herbal, pengguna dapat memilih gambar dari galeri atau mengambil foto menggunakan kamera. </string>
    <string name="penggunaan">Panduan</string>
    <string name="tutor2">Kemudian klik button mulai klasifikasi</string>
    <string name="tutor3">Kemudian akan menampilkan gambar dan nama tanaman. Manfaat tanaman ditampilkan dalam bottom sheet yang bisa ditarik ke atas untuk melihat informasi lengkap.</string>
   <string name="tutor4">Untuk melakukan identifikasi secara real-time, pengguna terlebih dahulu harus menekan tombol “Real-Time” pada halaman utama.</string>
    <string name="tutor5">Sistem akan membuka kamera dan secara otomatis melakukan klasifikasi terhadap tanaman yang ditangkap oleh kamera, tanpa perlu menekan tombol tambahan.</string>
    <string name="tutor6">Untuk melihat manfaat tanaman bisa klik button manfaat, kemudian manfaat tanaman akan di tampilkan</string>
    <string name="tutor">tutor</string>
    <string name="about">HerbVision adalah aplikasi untuk mengidentifikasi berbagai jenis tanaman herbal dengan mudah. Cukup ambil gambar menggunakan kamera atau pilih dari galeri, dan aplikasi akan memberi tahu nama dan manfaat tanaman tersebut. Semua analisis yang dilakukan akan tersimpan dalam riwayat, sehingga Anda bisa melihatnya lagi kapan saja.</string>
    <string name="Detail">Dibuat oleh: \n Nama : Jujun Junaedi\nNIM : 20210810016 \n Kelas : TINFC-2021-05\nProgram Studi : Teknik Informatika\nFakultas : Komputer\n Universitas : Kuningan</string>
    <string name="manfaat">Manfaat : </string>
    <string name="akurasi">Akurasi</string>
    <string name="tanggal_analisis">Tanggal Analisis</string>
    <string name="nama_tanaman">Nama Tanaman</string>
    <string name="realtime">Realtime</string>

    <!-- Nama Tanaman -->
    <string name="lavender">Lavender</string>
    <string name="rosemary">Rosemary</string>
    <string name="tapak_dara">Tapak Dara</string>
    <string name="bidara">Bidara</string>
    <string name="saga">Saga</string>
    <string name="jarak_tintir">Jarak Tintir</string>
    <string name="mint">Mint</string>
    <string name="kelor">Kelor</string>
    <string name="temulawak">Temulawak</string>
    <string name="lidah_buaya">Lidah Buaya</string>
    <string name="unknown">Tanaman Tidak Diketahui</string>


    <!-- Manfaat Tanaman -->
    <string name="manfaat_lavender">&#8226; Relaksasi\n&#8226; Meredakan kecemasan\n&#8226; Meningkatkan kualitas tidur\n&#8226; Pereda nyeri\n&#8226; Antikejang\n&#8226; Antiinflamasi\n&#8226; Antioksidan\n&#8226; Antibakteri\n&#8226; Antijamur</string>

    <string name="manfaat_rosemary">&#8226; Sumber antioksidan kuat\n&#8226; Antiinflamasi dan antibakteri\n&#8226; Mendukung kesehatan otak dan daya ingat\n&#8226; Membantu menjaga kadar gula darah\n&#8226; Berpotensi sebagai antikanker\n&#8226; Melindungi hati dari radikal bebas\n&#8226; Digunakan dalam pengobatan tradisional dan modern</string>

    <string name="manfaat_tapak_dara">&#8226; Menurunkan tekanan darah\n&#8226; Membantu mengontrol kadar gula darah\n&#8226; Mengandung senyawa antikanker (vinblastin dan vinkristin)\n&#8226; Sumber antioksidan untuk melindungi sel tubuh</string>

    <string name="manfaat_bidara">&#8226; Antimikroba: Efektif melawan bakteri, jamur, dan parasit.\n&#8226; Analgetik dan Antipiretik: Membantu meredakan nyeri dan menurunkan demam.\n&#8226; Antiinflamasi: Mengurangi peradangan dalam tubuh\n&#8226; Antikanker: Memiliki efek sitotoksik yang dapat menghambat pertumbuhan sel kanker.\n&#8226;Antioksidan: Melawan radikal bebas yang dapat merusak sel-sel tubuh.\n&#8226; Antidepresan: Menghambat degradasi neurotransmiter untuk mencegah depresi.\n&#8226; Antidiabetik: Menghambat enzim pemecah karbohidrat untuk mengontrol kadar gula darah.\n&#8226;</string>

    <string name="manfaat_saga">&#8226; Sumber antioksidan\n&#8226; Antiinflamasi dan antibakteri\n&#8226; Membantu mengontrol kadar gula darah\n&#8226; Meredakan batuk dan radang tenggorokan\n&#8226; Berpotensi sebagai antivirus dan antimalaria</string>

    <string name="manfaat_jarak_tintir">&#8226; Mempercepat penyembuhan luka\n&#8226; Membantu epitelisasi kulit\n&#8226; Bersifat antiseptik</string>

    <string name="manfaat_mint">&#8226; Mengandung mentol untuk efek menyegarkan\n&#8226; Sumber antioksidan dan vitamin\n&#8226; Menjaga kesehatan mulut dan gigi\n&#8226; Membantu sistem pernapasan\n&#8226; Meningkatkan kesehatan pencernaan\n&#8226; Bermanfaat untuk kulit\n&#8226; Digunakan dalam industri farmasi dan makanan</string>

    <string name="manfaat_kelor">&#8226; Kaya nutrisi (vitamin, protein, mineral)\n&#8226; Antioksidan\n&#8226; Antiinflamasi\n&#8226; Antikanker\n&#8226; Antidiabetik\n&#8226; Menjaga kesehatan jantung, hati, dan tekanan darah</string>

    <string name="manfaat_temulawak">&#8226; Sumber antioksidan dan antiinflamasi\n&#8226; Melawan bakteri dan mikroba\n&#8226; Menjaga kesehatan hati\n&#8226; Meningkatkan fungsi pencernaan\n&#8226; Membantu meredakan diare\n&#8226; Meningkatkan daya tahan tubuh</string>

    <string name="manfaat_lidah_buaya">&#8226; Mempercepat penyembuhan luka\n&#8226; Merangsang produksi kolagen untuk regenerasi kulit\n&#8226; Mengurangi peradangan\n&#8226; Melawan bakteri dan virus\n&#8226; Melembapkan dan menyehatkan kulit\n&#8226; Meredakan iritasi dan gatal</string>

    <string name="manfaat_unknown">Tanaman tidak diketahui. Silakan coba lagi dengan gambar yang lebih jelas atau sudut yang berbeda.</string>



</resources>