<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_marginTop="55dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@drawable/background" />

        <TextView
            android:id="@+id/detailPlantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_tanaman"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/detailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_analisis"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/detailAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akurasi"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/detailManfaat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manfaat"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</ScrollView>
