<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".UsageActivity"
android:background="@color/white">

<!-- Header -->
<include
    layout="@layout/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"/>

<!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        android:fillViewport="true"
        android:gravity="top">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
>

        <!-- Judul -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penggunaan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/lemonada"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"/>

        <!-- Langkah 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <!-- Gambar Tutorial -->
            <ImageView
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:contentDescription="@string/tutor"
                android:src="@drawable/tutor1"
                android:scaleType="fitCenter"
                android:layout_weight="1"/>

            <!-- Keterangan -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tutor1"
                android:fontFamily="@font/lemonada"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_marginStart="11sp"/>

            <!-- Nomor Langkah -->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/satu"
                android:contentDescription="@string/tutor"
                android:scaleType="fitCenter"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>


        <!-- Langkah 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/dua"
                android:contentDescription="@string/tutor"
                android:scaleType="fitCenter"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tutor2"
                android:fontFamily="@font/lemonada"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:src="@drawable/tutor2"
                android:scaleType="fitCenter"
                android:contentDescription="@string/tutor"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- Langkah 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <!-- Gambar Tutorial -->
            <ImageView
                android:layout_width="1dp"
                android:layout_height="150dp"
                android:src="@drawable/tutor3"
                android:scaleType="fitCenter"
                android:contentDescription="@string/tutor"
                android:layout_weight="1"/>

            <!-- Keterangan -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tutor3"
                android:fontFamily="@font/lemonada"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_marginStart="11sp"/>

            <!-- Nomor Langkah -->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/tiga"
                android:contentDescription="@string/tutor"
                android:scaleType="fitCenter"
                android:layout_marginEnd="8dp"/>
        </LinearLayout >


    </LinearLayout>
</androidx.core.widget.NestedScrollView>

<!-- Bottom Navigation -->
<include
    layout="@layout/bottom_navigation"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
