<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/identifikasi_layout"
    android:background="@drawable/background">

    <!-- Logo & Nama Aplikasi -->
    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lemonada"
        android:padding="15dp"
        android:text="@string/keterangan"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp">

        <!-- Tombol Galeri -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/galleryButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/galeri" />

            <TextView
                android:id="@+id/galleryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:fontFamily="@font/lemonada"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <!-- Tombol Kamera -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/cameraButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/kamera" />

            <TextView
                android:id="@+id/cameraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kamera"
                android:fontFamily="@font/lemonada"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <!-- Realtime -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
>
            <ImageView
                android:id="@+id/realtimeButton"
                android:layout_width="80dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_realtime" />

            <TextView
                android:id="@+id/realtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realtime"
                android:fontFamily="@font/lemonada"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>


    <!-- Menu Navigasi Bawah -->
    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
